@@ -1,5 +1,7 @@
 5/6/25:
 
+- Rename resetGame to resetGameboard
+- Move resetGame function location
 - Create resetGame function to clear board and set to player 1's turn
 - Add test move function
 - Step 4 wip
